--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="19"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="Contacts"
+        <activity android:name=".ContactsActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
