--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="19"/>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".ContactsActivity"
                   android:label="@string/app_name">
