--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,5 +14,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ContactDetailsViewActivity"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
